; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/ccp/extr_ccp-crypto-aes-galois.c_ccp_aes_gcm_cra_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/ccp/extr_ccp-crypto-aes-galois.c_ccp_aes_gcm_cra_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_aead = type { i32 }
%struct.ccp_ctx = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@ccp_aes_gcm_complete = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_aead*)* @ccp_aes_gcm_cra_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ccp_aes_gcm_cra_init(%struct.crypto_aead* %0) #0 {
  %2 = alloca %struct.crypto_aead*, align 8
  %3 = alloca %struct.ccp_ctx*, align 8
  store %struct.crypto_aead* %0, %struct.crypto_aead** %2, align 8
  %4 = load %struct.crypto_aead*, %struct.crypto_aead** %2, align 8
  %5 = call %struct.ccp_ctx* @crypto_aead_ctx(%struct.crypto_aead* %4)
  store %struct.ccp_ctx* %5, %struct.ccp_ctx** %3, align 8
  %6 = load i32, i32* @ccp_aes_gcm_complete, align 4
  %7 = load %struct.ccp_ctx*, %struct.ccp_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.ccp_ctx, %struct.ccp_ctx* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 8
  %9 = load %struct.ccp_ctx*, %struct.ccp_ctx** %3, align 8
  %10 = getelementptr inbounds %struct.ccp_ctx, %struct.ccp_ctx* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  %13 = load %struct.crypto_aead*, %struct.crypto_aead** %2, align 8
  %14 = call i32 @crypto_aead_set_reqsize(%struct.crypto_aead* %13, i32 4)
  ret i32 0
}

declare dso_local %struct.ccp_ctx* @crypto_aead_ctx(%struct.crypto_aead*) #1

declare dso_local i32 @crypto_aead_set_reqsize(%struct.crypto_aead*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
